--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <title>Page Title</title>
 </head>
 <body>
+    <h1>My First Heading</h1>
     <p>first paragraph.</p>
     <p>This is an another paragraph.</p>
+    <p>My first paragraph.</p>
 </body>
 </html>
